# boardgame

./: .gitignore  Generalization.md  LICENSE  README.md  boardgame.cabal  setup-ahc.ps1  setup-ahc.sh  wasm-build.ps1  wasm-build.sh
.github/workflows/: update-webpage.yml
executable/: ArithmeticProgressionGame.hs  ConnectFour.hs  Cross.hs  Gale.hs  Havannah.hs  Hex.hs  MNKGame.hs  Main.hs  ShannonSwitchingGame.hs  TicTacToe.hs  Y.hs  Yavalath.hs
src/: Boardgame.hs  ColoredGraph.hs  MyLib.hs
src/Boardgame/: ColoredGraph.hs  Web.hs
src/MyLib/: Web.hs
