cabal-version:       >=1.10
name:                boardgame
version:             0.1.0.0
synopsis:            Modeling boardgames
description:
  A library with the basis for modeling and playing boardgames. Comes with
  built-in functions for playing games through a web interface (requires WASM
  compilation).
homepage:            https://github.com/Boardgame-DSL/boardgame
bug-reports:         https://github.com/Boardgame-DSL/boardgame/issues
-- license:
-- license-file:        LICENSE
-- maintainer:
-- copyright:
category:            Model, Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag wasm
  description:         Eanbles builds targeting WASM.
  default:             False
  manual:              True

library
  exposed-modules:     Boardgame, Boardgame.ColoredGraph
  build-depends:       base >=4.12, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(wasm)
    exposed-modules:   Boardgame.Web
    build-depends:
        aeson >= 1.4
      , asterius-prelude == 0.0.1
      , scientific >= 0.3
    CPP-options: "-DWASM"

executable boardgame
  main-is:             Main.hs
  build-depends:
      base >=4.12
    , grid >= 7.8.14
    , containers >= 0.6
    , boardgame
    , array
  hs-source-dirs:      executable
  default-language:    Haskell2010
  if flag(wasm)
    build-depends:
        aeson >= 1.4
      , vector >= 0.12
    CPP-options: "-DWASM"

test-suite boardgame-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             BoardgameTest.hs
  build-depends:       base >=4.12

source-repository head
  type:     git
  location: git://github.com/Boardgame-DSL/boardgame.git
